Update SecureChatApp.java